Fix dragging the LHS scrollbar also dragging the channel behind it

--- a/webapp/channels/src/components/common/scrollbars.scss
+++ b/webapp/channels/src/components/common/scrollbars.scss
@@ -1,3 +1,8 @@
+.simplebar-track {
+    // Prevent clicking or dragging the scrollbar from interacting with elements behind it
+    pointer-events: all;
+}
+
 .simplebar-track .simplebar-scrollbar::before {
     width: 6px;
     border-radius: 2px;
